--- a/cnd.toolchain.ui/src/org/netbeans/modules/cnd/toolchain/ui/compiler/ParserSettingsPanel.form
+++ b/cnd.toolchain.ui/src/org/netbeans/modules/cnd/toolchain/ui/compiler/ParserSettingsPanel.form
@@ -61,6 +61,14 @@
               <ResourceString bundle="org/netbeans/modules/cnd/toolchain/ui/compiler/Bundle.properties" key="COMPILER_COLLECTION_LBL" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
             </Property>
           </Properties>
+          <AccessibilityProperties>
+            <Property name="AccessibleContext.accessibleName" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+              <ResourceString bundle="org/netbeans/modules/cnd/toolchain/ui/compiler/Bundle.properties" key="COMPILERS_TABBEDPANE_AN" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+            </Property>
+            <Property name="AccessibleContext.accessibleDescription" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+              <ResourceString bundle="org/netbeans/modules/cnd/toolchain/ui/compiler/Bundle.properties" key="COMPILERS_TABBEDPANE_AD" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+            </Property>
+          </AccessibilityProperties>
           <AuxValues>
             <AuxValue name="generateMnemonicsCode" type="java.lang.Boolean" value="true"/>
           </AuxValues>
