--- a/php.samples/samples_src/TodoList/page/home.phtml
+++ b/php.samples/samples_src/TodoList/page/home.phtml
@@ -41,6 +41,8 @@
  * Portions Copyrighted 2011 Sun Microsystems, Inc.
  */
 
+namespace TodoList;
+
 ?>
 <h1>Welcome!</h1>
 
@@ -55,5 +57,5 @@
     <li>split scripts and templates</li>
     <li>handle expected and unexpected exceptions</li>
 </ul>
-<p class="p">Detailed information can be found in the <i>readme.html</i> file.</p>
+<p class="p">Detailed information can be found in the <i>readme.html</i> file (in project directory).</p>
 <p class="p"><b>This sample is not intented to be used on a production server without any changes.</b></p>
