Updating platform project.xml element.

--- a/java.project.ui/src/org/netbeans/modules/java/project/ui/FixPlatform.form
+++ b/java.project.ui/src/org/netbeans/modules/java/project/ui/FixPlatform.form
@@ -36,10 +36,12 @@
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="create" min="-2" max="-2" attributes="0"/>
-                          <Component id="platforms" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <Component id="create" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                          </Group>
+                          <Component id="platforms" max="32767" attributes="0"/>
                       </Group>
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
               </Group>
           </Group>
