--- a/java.j2seembedded/src/org/netbeans/modules/java/j2seembedded/ui/CreateJREPanel.form
+++ b/java.j2seembedded/src/org/netbeans/modules/java/j2seembedded/ui/CreateJREPanel.form
@@ -58,38 +58,33 @@
                               </Group>
                           </Group>
                           <Group type="102" attributes="0">
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="labelOptions" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="labelExtensions" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="labelError" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Group type="102" attributes="0">
-                                      <EmptySpace min="10" pref="10" max="-2" attributes="0"/>
-                                      <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="checkBoxSunpkcs11" alignment="0" min="-2" max="-2" attributes="0"/>
-                                          <Group type="102" alignment="0" attributes="0">
-                                              <Group type="103" groupAlignment="0" attributes="0">
-                                                  <Component id="checkBoxFxGraphics" alignment="0" min="-2" max="-2" attributes="0"/>
-                                                  <Component id="checkBoxFxControls" alignment="0" min="-2" max="-2" attributes="0"/>
-                                                  <Component id="checkBoxSunec" alignment="0" min="-2" max="-2" attributes="0"/>
-                                              </Group>
-                                              <EmptySpace type="separate" max="-2" attributes="0"/>
-                                              <Group type="103" groupAlignment="0" attributes="0">
-                                                  <Component id="checkBoxNashorn" min="-2" max="-2" attributes="0"/>
-                                                  <Component id="checkBoxCharsets" min="-2" max="-2" attributes="0"/>
-                                                  <Component id="checkBoxLocales" min="-2" max="-2" attributes="0"/>
-                                              </Group>
-                                          </Group>
-                                      </Group>
-                                  </Group>
-                              </Group>
-                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                          </Group>
-                          <Group type="102" attributes="0">
                               <EmptySpace min="10" pref="10" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="labelJRECreateInfo" pref="380" max="32767" attributes="0"/>
                                   <Component id="labelRemoteJREInfo" pref="0" max="32767" attributes="0"/>
                               </Group>
+                          </Group>
+                          <Group type="102" attributes="0">
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="labelOptions" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="labelExtensions" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="labelError" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Group type="102" alignment="0" attributes="0">
+                                      <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
+                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                          <Component id="checkBoxGcf" max="32767" attributes="0"/>
+                                          <Component id="checkBoxLocales" min="-2" max="-2" attributes="0"/>
+                                          <Component id="checkBoxSunpkcs11" max="32767" attributes="0"/>
+                                      </Group>
+                                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                                      <Group type="103" groupAlignment="0" attributes="0">
+                                          <Component id="checkBoxNashorn" min="-2" max="-2" attributes="0"/>
+                                          <Component id="checkBoxCharsets" min="-2" max="-2" attributes="0"/>
+                                          <Component id="checkBoxSunec" min="-2" max="-2" attributes="0"/>
+                                      </Group>
+                                  </Group>
+                              </Group>
+                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
@@ -140,22 +135,20 @@
               <Component id="labelExtensions" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="checkBoxFxGraphics" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="checkBoxLocales" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="checkBoxFxControls" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="checkBoxSunpkcs11" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="checkBoxCharsets" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="checkBoxSunec" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="checkBoxNashorn" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="checkBoxGcf" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="checkBoxSunpkcs11" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="30" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="checkBoxNashorn" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="checkBoxLocales" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace pref="59" max="32767" attributes="0"/>
               <Component id="labelError" min="-2" max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -242,20 +235,6 @@
       <Properties>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
           <ResourceString bundle="org/netbeans/modules/java/j2seembedded/ui/Bundle.properties" key="CreateJREPanel.labelExtensions.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
-        </Property>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JCheckBox" name="checkBoxFxGraphics">
-      <Properties>
-        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="org/netbeans/modules/java/j2seembedded/ui/Bundle.properties" key="CreateJREPanel.checkBoxFxGraphics.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
-        </Property>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JCheckBox" name="checkBoxFxControls">
-      <Properties>
-        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="org/netbeans/modules/java/j2seembedded/ui/Bundle.properties" key="CreateJREPanel.checkBoxFxControls.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
         </Property>
       </Properties>
     </Component>
@@ -373,6 +352,13 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JSeparator" name="jSeparator1">
+    </Component>
+    <Component class="javax.swing.JCheckBox" name="checkBoxGcf">
+      <Properties>
+        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+          <ResourceString bundle="org/netbeans/modules/java/j2seembedded/ui/Bundle.properties" key="CreateJREPanel.checkBoxGcf.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+        </Property>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
