Ecma level hint cleanup.

--- a/javascript2.editor/src/org/netbeans/modules/javascript2/editor/ui/ECMAScriptPanel.form
+++ b/javascript2.editor/src/org/netbeans/modules/javascript2/editor/ui/ECMAScriptPanel.form
@@ -50,22 +50,15 @@
   </Layout>
   <SubComponents>
     <Component class="javax.swing.JComboBox" name="cbVersion">
-      <Properties>
-        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
-            <StringItem index="0" value="Item 1"/>
-            <StringItem index="1" value="Item 2"/>
-            <StringItem index="2" value="Item 3"/>
-            <StringItem index="3" value="Item 4"/>
-          </StringArray>
-        </Property>
-      </Properties>
       <Events>
         <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="cbVersionItemStateChanged"/>
       </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="lVersion">
       <Properties>
+        <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.ComponentChooserEditor">
+          <ComponentRef name="cbVersion"/>
+        </Property>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
           <ResourceString bundle="org/netbeans/modules/javascript2/editor/ui/Bundle.properties" key="ECMAScriptPanel.lVersion.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
         </Property>
